Small fix in "per" documentation

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </li>
                 <li>
                     <h4>per<span class="parameters">()</span></h4>
-                    <pre>〇.ELM.per('.button').add('enabled');</pre>
+                    <pre>var elements = 〇.ELM.per('.button');</pre>
                     <div><i>Per</i> returns a list of elements that corresponds to a provided query.
                         Additionally, this returned list has the following methods:
                         <ul class="methods">
