updated folder structure

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>〇 - A Lightweight Framework</title>
-    <script type="application/javascript" src="o.min.js"></script>
-    <link rel="stylesheet" href="index.css">
+    <script type="application/javascript" src="lib/o.min.js"></script>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body class="body">
     <aside class="sidebar">
@@ -40,8 +40,8 @@
         <section>
             <h2>Download</h2>
             <ul class="downloads">
-                <li><a href="o.js">Uncompressed</a> - (19KB)</li>
-                <li><a href="o.js">Compressed</a> - (7KB)</li>
+                <li><a href="lib/o.js">Uncompressed</a> - (19KB)</li>
+                <li><a href="lib/o.js">Compressed</a> - (7KB)</li>
             </ul>
         </section>
         <section>
@@ -411,9 +411,9 @@
     <script type="text/html" class="js-template">
         <div>Hello world</div>
     </script>
-    <script type="application/javascript" src="index.js"></script>
+    <script type="application/javascript" src="js/index.js"></script>
     <script src="http://code.jquery.com/qunit/qunit-1.19.0.js"></script>
-    <script src="o.unit.js"></script>
+    <script src="tests/o.unit.js"></script>
 
 </body>
 </html>
