--- a/tests/o.templates.html
+++ b/tests/o.templates.html
@@ -5,8 +5,6 @@
     <title></title>
 </head>
 <body>
-    <ul>
-        <li id="loadedTemplate" class="js-template"><div>Loaded world</div></li>
-    </ul>
+  <template data-id="loadedTemplate"><div>Loaded world</div></template>
 </body>
 </html>
